fixed generator tests

--- a/generators/component/templates/_view.html
+++ b/generators/component/templates/_view.html
@@ -1,9 +1,9 @@
 <template class="shadow">
-  <style><%- shadowStyle %></style>
+  <style><%%- shadowStyle %%></style>
   <%- shadowHTML %>
 </template>
 <template class="main">
-  <style><%- style %></style>
+  <style><%%- style %%></style>
   <%- html %>
 </template>
 
