--- a/generators/component/templates/_view.html
+++ b/generators/component/templates/_view.html
@@ -9,6 +9,6 @@
 
 <script>
     (function(window, document, undefined) {
-      require( "websemble" ).frontend.<%= createFunction %>( '<%= componentTag %>' );
+      require( "websemble" ).frontend.createComponent( '<%= componentTag %>' );
     })(window, document);
 </script>
