--- a/generators/app/templates/src/main/template/_index.html
+++ b/generators/app/templates/src/main/template/_index.html
@@ -17,8 +17,6 @@
   </head>
   <body>
     <div id="messages" style="max-height:100px; overflow-x:hidden; overflow-y:scroll;"></div>
-    <core-app class="container-fluid">
-      <view-index></view-index>
-    </core-app>
+    <core-app class="container-fluid"></core-app>
   </body>
 </html>
